# JuDoMarble

./: .gitignore  BoardData.h  BuildingDialog.cpp  BuildingDialog.h  CMakeLists.txt  EditorCanvas.cpp  EditorCanvas.h  GameSave.cpp  GameSave.h  GameState.h  JuDoMarble.cpp  JuDoMarble.qrc  JuDoMarble.sln  JuDoMarble.vcxproj  JuDoMarble.vcxproj.filters  MainWindow.cpp  MainWindow.h  PlayerSelectDialog.cpp  PlayerSelectDialog.h  SPEC.md  SimulationWindow.cpp  SimulationWindow.h  SoundManager.cpp  SoundManager.h  board_data.json  generate_vs2022.bat  recolor_icons.py  remove_bg.py  save1.jdm
src/: EditorCanvas.h  MainWindow.cpp  MainWindow.h  PolygonItem.h  SimulationWindow.cpp  main.cpp
